prog.cppresult.txt
In file included from cur.cpp:16:0:
maria/prog.cpp: In member function 'Matrix& Matrix::operator=(const Matrix&)':
maria/prog.cpp:78:37: error: invalid initialization of non-const reference of type 'Matrix&' from an rvalue of type 'Matrix'
   if (failed()){ return Matrix(*this); }
                                     ^
cur.cpp: In function 'int main(int, char**)':
cur.cpp:207:31: error: declaration of C function 'int main(int, char**)' conflicts with
 int main(int argc, char **argv) {
                               ^
In file included from cur.cpp:16:0:
maria/prog.cpp:353:5: error: previous declaration 'int main()' here
 int main()
     ^
./check.sh: line 24: ./a.out: No such file or directory
